                         CHANGES version 2.4

              This file summarizes changes made since 1.0


Version 2.4
-----------

Version 2.3
-----------
* Cleaned up API and changed function return type to void for 
  those functions that can throw exception on error. 
  
* Support variable arguments in Connection_prepareStatement() 
  to make it easy to build prepared statements in-place

Version 2.2.3
-------------
Bug fixes:
* Make sure connection properties, max rows and query timeout are
  reset on Connection_close(), if changed.
* Ensure that timeout is set for new Connections.
* SQLite: Fixed a bug so the SQLite driver now will retry executing
  on database lock. This should greatly improve concurrent usage of
  SQLite and reduce database locks from occurring 

Version 2.2.2
-------------
Bug fixes:
* Ensure that reaper progress forward and remove all connections it can
* Fixed a va_copy bug on 64 bits systems
                 
Version 2.2.1
-------------
* SQLite: Improved error reporting by using sqlite3_prepare_v2() when 
  available. Thanks to Paul Stevens for suggesting this.
Bug fixes:
* MySQL and PostgreSQL: Fixed off-by-one count when verifying validity
  of parameter and column index. Thanks to Paul Stevens for bug report.
* MySQL: Workaround mysql column truncation bug. Thanks to Paul Stevens
  for bug report.

Version 2.2
-----------
* Detailed error message added to exception. In an exception handler,
  the variable Exception_frame.message, now provides an alternative to 
  Connection_getLastError() for obtaining the latest error message
* From this release, building with exceptions handling is no longer 
  optional but required
* Internal optimizing changes 
Bug fixes:
* Fixed Connection_prepareStatement() error reported on a PostgreSQL
  Connection. Thanks to Paul Stevens for bug report.
* MySQL: Fixed error in ResultSet_getBlob() and ResultSet_getString() 
  which lead to a segfault when trying to obtain "large" strings and 